# smallvideo

./: .gitignore  README.md  main.py  pyproject.toml
configs/: cifar10.yaml  imagenet.yaml
data/: __init__.py  cifar10.py  imagenet.py
models/: __init__.py  dit.py  ldm.py  vae.py
scripts/: process_imagenet.sh  split_imagenet_train_val.py
trainers/: ldm_trainer.py  vae_trainer.py
