[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smallvideo"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "einops>=0.8.1",
    "omegaconf>=2.3.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["models", "trainers"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

